--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "Backend"]
 	path = Backend
 	url = https://github.com/crisstiank1/BackendDocuCloud
+	branch = autenticacion
 [submodule "Frontend"]
 	path = Frontend
 	url = https://github.com/crisstiank1/frontend-docu-cloud
