--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,10 @@ services:
       db:
         condition: service_healthy
     # Modo Desarrollo: Montar código fuente para Live Reload/recompilación rápida
-    volumes:
+    #volumes:
       # Monta el código del proyecto para que los cambios se reflejen (específico de Spring Boot/Maven)
-      - ./Backend:/app
-      - /root/.m2:/root/.m2 # Cache de dependencias de Maven
+     # - ./Backend:/app
+      #- /root/.m2:/root/.m2 # Cache de dependencias de Maven
     
   # 3. Frontend (Vue.js SPA servido por Nginx)
   frontend:
@@ -57,14 +57,14 @@ services:
       - backend
       #- classifier # Descomentar cuando el servicio classifier esté listo
     # Modo Desarrollo: Montar el código de Nginx para ver los cambios de configuración sin rebuild
-    volumes:
+    #volumes:
       # Monta el nginx.conf de desarrollo
-      - ./Frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+     # - ./Frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       # Monta la carpeta dist de Vue después de la construcción (asumiendo que se monta en el Dockerfile)
       # Nota: En desarrollo puro con Vue CLI, a menudo se usa "npm run dev" fuera de Docker,
       # pero si lo quieres con Docker, la imagen final debería copiar el 'dist'.
       # Mapeamos la salida de la compilación de Vue para ser servida por Nginx
-      - ./Frontend/dist:/usr/share/nginx/html:ro
+      #- ./Frontend/dist:/usr/share/nginx/html:ro
 
 # Comentar este servicio hasta que ClasificadorDocuCloud esté listo.
 # classifier:
